--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,8 @@ input[type="checkbox"] {
   transform: scale(1.6);
   cursor: pointer;
 }
+
+.tabel-absen td:first-child,
+.tabel-absen th:first-child {
+  text-align: left;
+}
